@@ -12,7 +12,6 @@ METCollectionName MET_RefFinal_AntiKt4EMTopo
 LooseMETCollectionName MET_Reference_AntiKt4EMTopo
 
 TruthCollectionName TruthParticles
-#TruthEventCollectionName TruthEvents
 TruthJetCollectionName AntiKt4TruthJets
 TopPartonHistory ttbar
 PDFInfo True
@@ -45,6 +44,7 @@ TRIGDEC HLT_mu26_imedium
 
 SELECTION loose
 INITIAL
+#GRL data/ttHMultilepton/data15_13TeV.periodA1_DetStatus-v62-pro17_DQDefects-00-01-02_PHYS_CombinedPerf_Tracking_Tracking.xml
 #TRIGDEC HLT_mu26_imedium 
 #TRIGMATCH HLT_mu26_imedium 
 TTHMULTILEP
